<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30dp"
        android:id="@+id/yourSeries"
        android:text="@string/series">
    </TextView>

    <LinearLayout
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/yourSeries">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="20dp"
            android:layout_weight="0.2">
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSortAZSeries"
            android:layout_weight="0.3"
            android:text="@string/a_z">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSortRatingSeries"
            android:layout_weight="0.3"
            android:layout_marginLeft="15dp"
            android:text="@string/rating">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_below="@+id/sort">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etSearchSeries"
            android:layout_weight="0.9">
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearchSeries"
            android:layout_weight="0.1"
            android:text="@string/search">
        </Button>
    </LinearLayout>


    <ListView
        android:id="@+id/lstSeries"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter">
    </ListView>

    <Button
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_circle"
        android:textSize="30dp"
        android:text="@string/addNew"
        android:id="@+id/addButtonSeries"
        android:layout_margin="10dp">
    </Button>

</RelativeLayout>